migrate to spark 3.5.x (#15) (#17)
* migrate to spark 3.5.x